--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "node index.js",
+    "start": "ng serve",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -13,7 +13,7 @@
   },
   "engines": {
     "node": "10.16.2",
-    "npm": "3.10.9"
+    "npm": "6.11.2"
   },
   "private": true,
   "dependencies": {
@@ -32,7 +32,6 @@
     "@angular/router": "8.0.0",
     "ajv": "6.10.0",
     "arrive": "2.4.1",
-    "body-parser": "^1.19.0",
     "bootstrap": "4.3.1",
     "bootstrap-material-design": "4.1.2",
     "bootstrap-notify": "3.1.3",
@@ -41,14 +40,10 @@
     "core-js": "3.1.3",
     "cors": "^2.8.5",
     "enhanced-resolve": "^4.1.1",
-    "express": "^4.17.1",
-    "express-router": "0.0.1",
     "googleapis": "40.0.0",
     "hammerjs": "2.0.8",
     "jquery": "3.4.1",
     "moment": "2.24.0",
-    "mongoose": "^5.7.13",
-    "path": "^0.12.7",
     "perfect-scrollbar": "1.1.0",
     "popper.js": "1.15.0",
     "rxjs": "6.5.2",
@@ -68,6 +63,7 @@
     "@types/jquery": "3.3.29",
     "@types/node": "12.0.7",
     "codelyzer": "5.1.0",
+    "https-proxy-agent": "^3.0.1",
     "jasmine-core": "3.4.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "4.1.0",
