--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/platform-server": "8.0.0",
     "@angular/router": "8.0.0",
     "ajv": "6.10.0",
+    "angular2-countrypicker": "^1.0.0",
     "arrive": "2.4.1",
     "bootstrap": "4.3.1",
     "bootstrap-material-design": "4.1.2",
@@ -44,6 +45,7 @@
     "hammerjs": "2.0.8",
     "jquery": "3.4.1",
     "moment": "2.24.0",
+    "pdfmake": "^0.1.63",
     "perfect-scrollbar": "1.1.0",
     "popper.js": "1.15.0",
     "rxjs": "6.5.2",
